--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,5 @@
-db.name=springbundle
-db.host=127.0.0.1
-db.port=27017
-db.user=
-db.password=
+spring.data.mongodb.uri=mongodb://localhost:27017/spring-bundle-dev
 
+server.port=8082
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
