--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/spring-bundle-dev
 
+server.servlet.context-path=/api
 server.port=3001
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
