--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb://mongo:27017/spring-bundle-prod
 
+server.servlet.context-path=/api
 server.port=8083
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
